--- a/SMART_APP/SMART_APP.csproj
+++ b/SMART_APP/SMART_APP.csproj
@@ -57,6 +57,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
 		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.1" />
@@ -64,7 +65,6 @@
 
 	<ItemGroup>
 	  <Folder Include="Helpers\" />
-	  <Folder Include="ViewModels\" />
 	</ItemGroup>
 
 	<ItemGroup Condition="'$(TargetFramework)' == 'net8.0-ios'">
@@ -74,5 +74,21 @@
 	<ItemGroup Condition="'$(TargetFramework)' == 'net8.0-android'">
 	  <PackageReference Version="4.2.114" Include="UXD.Grial.Basic" />
 		<PackageReference Version="7.0.1" Include="CommunityToolkit.Maui" />
+	</ItemGroup>
+	<ItemGroup>
+	  <Compile Update="Views\ForgetPasswordPage.xaml.cs">
+	    <DependentUpon>ForgetPasswordPage.xaml</DependentUpon>
+	  </Compile>
+	  <Compile Update="Views\ProfileUserPage.xaml.cs">
+	    <DependentUpon>ProfileUserPage.xaml</DependentUpon>
+	  </Compile>
+	</ItemGroup>
+	<ItemGroup>
+	  <MauiXaml Update="Views\ForgetPasswordPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\ProfileUserPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 </Project>
